# djangofun

./: docker-compose.yml
core/: Dockerfile  pyproject.toml
core/core/: aws.py  celery.py  producer.py  settings.py  urls.py
core/page/: admin.py  models.py  tasks.py  tests.py  urls.py
core/page/migrations/: 0001_initial.py  0002_page_follow_requests_page_followers_page_image_and_more.py  0003_alter_page_tags.py  0004_alter_post_likes.py  0005_alter_post_likes.py  0006_alter_post_likes.py  0007_alter_page_follow_requests.py  0008_page_is_blocked.py
core/page/serializers/: page_serializers.py  post_serializers.py
core/page/services/: page_service.py  post_service.py
core/page/views/: page_view.py  post_view.py
core/scripts/: celery.sh  entrypoint.sh  setup_localstack.sh
core/user/: middleware.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
core/user/fixtures/: users.json
core/user/migrations/: 0001_initial.py  0002_refreshtoken.py  0003_alter_user_role.py  0004_delete_refreshtoken.py  0005_remove_user_image_s3_path_user_image_s3_key.py
stat/: Dockerfile  README.md  consumer.py  main.py  models.py  pyproject.toml  services.py  settings.py
stat/scripts/: entrypoint.sh
